feat: add mailings
