# api/openapi/bots.yaml
@@ -168,6 +168,7 @@ paths:
           schema:
             type: string
             example: 14ab-d740
+            description: Bot's UUID
           required: true
           description: TODO
       responses:
@@ -186,6 +187,40 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         404:
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /bots/{uuid}/mailings/{entryKey}/start:
+    post:
+      operationId: startMailing
+      parameters:
+        - in: path
+          name: uuid
+          schema:
+            type: string
+            default: Bot's UUID
+          required: true
+          description: TODO
+        - in: path
+          name: entryKey
+          schema:
+            type: string
+            default: Mailing's entry key
+          required: true
+          description: TODO
+      responses:
+        200:
+          description: TODO
+        401:
+          description: Missing JWT token in header
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
           description: TODO
           content:
             application/json:
@@ -254,6 +289,23 @@ components:
           type: integer
           example: 1
 
+    Mailing:
+      type: object
+      required:
+        - name
+        - entryKey
+        - requiredState
+      properties:
+        name:
+          type: string
+          example:
+        entryKey:
+          type: string
+          example: mailing-1
+        requiredState:
+          type: integer
+          example: 0
+
     Bot:
       type: object
       required:
@@ -284,6 +336,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/EntryPoint'
+        mailings:
+          type: array
+          items:
+            $ref: '#/components/schemas/Mailing'
         blocks:
           type: array
           items:
@@ -316,6 +372,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/EntryPoint'
+        mailings:
+          type: array
+          items:
+            $ref: '#/components/schemas/Mailing'
         blocks:
           type: array
           items:
