# internal/ports/httpport/openapi_api.gen.go
@@ -1,6 +1,6 @@
 // Package httpport provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by unknown module path version unknown version DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.2.0 DO NOT EDIT.
 package httpport
 
 import (
@@ -8,8 +8,8 @@ import (
 	"fmt"
 	"net/http"
 
-	"github.com/deepmap/oapi-codegen/pkg/runtime"
 	"github.com/go-chi/chi/v5"
+	"github.com/oapi-codegen/runtime"
 )
 
 // ServerInterface represents all server handlers.
@@ -27,11 +27,53 @@ type ServerInterface interface {
 	// (GET /bots/{uuid}/answers)
 	GetAnswers(w http.ResponseWriter, r *http.Request, uuid string)
 
+	// (POST /bots/{uuid}/mailings/{entryKey}/start)
+	StartMailing(w http.ResponseWriter, r *http.Request, uuid string, entryKey string)
+
 	// (POST /bots/{uuid}/start)
 	StartBot(w http.ResponseWriter, r *http.Request, uuid string)
 
 	// (POST /bots/{uuid}/stop)
 	StopBot(w http.ResponseWriter, r *http.Request, uuid string)
+}
+
+// Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
+
+type Unimplemented struct{}
+
+// (GET /bots)
+func (_ Unimplemented) GetBots(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (POST /bots)
+func (_ Unimplemented) CreateBot(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (GET /bots/{uuid})
+func (_ Unimplemented) GetBot(w http.ResponseWriter, r *http.Request, uuid string) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (GET /bots/{uuid}/answers)
+func (_ Unimplemented) GetAnswers(w http.ResponseWriter, r *http.Request, uuid string) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (POST /bots/{uuid}/mailings/{entryKey}/start)
+func (_ Unimplemented) StartMailing(w http.ResponseWriter, r *http.Request, uuid string, entryKey string) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (POST /bots/{uuid}/start)
+func (_ Unimplemented) StartBot(w http.ResponseWriter, r *http.Request, uuid string) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// (POST /bots/{uuid}/stop)
+func (_ Unimplemented) StopBot(w http.ResponseWriter, r *http.Request, uuid string) {
+	w.WriteHeader(http.StatusNotImplemented)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -49,9 +91,9 @@ func (siw *ServerInterfaceWrapper) GetBots(w http.ResponseWriter, r *http.Reques
 
 	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
 
-	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetBots(w, r)
-	})
+	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
@@ -66,9 +108,9 @@ func (siw *ServerInterfaceWrapper) CreateBot(w http.ResponseWriter, r *http.Requ
 
 	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
 
-	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.CreateBot(w, r)
-	})
+	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
@@ -86,7 +128,7 @@ func (siw *ServerInterfaceWrapper) GetBot(w http.ResponseWriter, r *http.Request
 	// ------------- Path parameter "uuid" -------------
 	var uuid string
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "uuid", runtime.ParamLocationPath, chi.URLParam(r, "uuid"), &uuid)
+	err = runtime.BindStyledParameterWithOptions("simple", "uuid", chi.URLParam(r, "uuid"), &uuid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "uuid", Err: err})
 		return
@@ -94,9 +136,9 @@ func (siw *ServerInterfaceWrapper) GetBot(w http.ResponseWriter, r *http.Request
 
 	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
 
-	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetBot(w, r, uuid)
-	})
+	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
@@ -114,7 +156,7 @@ func (siw *ServerInterfaceWrapper) GetAnswers(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "uuid" -------------
 	var uuid string
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "uuid", runtime.ParamLocationPath, chi.URLParam(r, "uuid"), &uuid)
+	err = runtime.BindStyledParameterWithOptions("simple", "uuid", chi.URLParam(r, "uuid"), &uuid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "uuid", Err: err})
 		return
@@ -122,9 +164,46 @@ func (siw *ServerInterfaceWrapper) GetAnswers(w http.ResponseWriter, r *http.Req
 
 	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
 
-	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetAnswers(w, r, uuid)
-	})
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// StartMailing operation middleware
+func (siw *ServerInterfaceWrapper) StartMailing(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "uuid" -------------
+	var uuid string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "uuid", chi.URLParam(r, "uuid"), &uuid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "uuid", Err: err})
+		return
+	}
+
+	// ------------- Path parameter "entryKey" -------------
+	var entryKey string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "entryKey", chi.URLParam(r, "entryKey"), &entryKey, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "entryKey", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.StartMailing(w, r, uuid, entryKey)
+	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
@@ -142,7 +221,7 @@ func (siw *ServerInterfaceWrapper) StartBot(w http.ResponseWriter, r *http.Reque
 	// ------------- Path parameter "uuid" -------------
 	var uuid string
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "uuid", runtime.ParamLocationPath, chi.URLParam(r, "uuid"), &uuid)
+	err = runtime.BindStyledParameterWithOptions("simple", "uuid", chi.URLParam(r, "uuid"), &uuid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "uuid", Err: err})
 		return
@@ -150,9 +229,9 @@ func (siw *ServerInterfaceWrapper) StartBot(w http.ResponseWriter, r *http.Reque
 
 	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
 
-	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.StartBot(w, r, uuid)
-	})
+	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
@@ -170,7 +249,7 @@ func (siw *ServerInterfaceWrapper) StopBot(w http.ResponseWriter, r *http.Reques
 	// ------------- Path parameter "uuid" -------------
 	var uuid string
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "uuid", runtime.ParamLocationPath, chi.URLParam(r, "uuid"), &uuid)
+	err = runtime.BindStyledParameterWithOptions("simple", "uuid", chi.URLParam(r, "uuid"), &uuid, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "uuid", Err: err})
 		return
@@ -178,9 +257,9 @@ func (siw *ServerInterfaceWrapper) StopBot(w http.ResponseWriter, r *http.Reques
 
 	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
 
-	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.StopBot(w, r, uuid)
-	})
+	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		handler = middleware(handler)
@@ -202,16 +281,16 @@ func (e *UnescapedCookieParamError) Unwrap() error {
 	return e.Err
 }
 
-type UnmarshallingParamError struct {
+type UnmarshalingParamError struct {
 	ParamName string
 	Err       error
 }
 
-func (e *UnmarshallingParamError) Error() string {
-	return fmt.Sprintf("Error unmarshalling parameter %s as JSON: %s", e.ParamName, e.Err.Error())
+func (e *UnmarshalingParamError) Error() string {
+	return fmt.Sprintf("Error unmarshaling parameter %s as JSON: %s", e.ParamName, e.Err.Error())
 }
 
-func (e *UnmarshallingParamError) Unwrap() error {
+func (e *UnmarshalingParamError) Unwrap() error {
 	return e.Err
 }
 
@@ -313,6 +392,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/bots/{uuid}/answers", wrapper.GetAnswers)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/bots/{uuid}/mailings/{entryKey}/start", wrapper.StartMailing)
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/bots/{uuid}/start", wrapper.StartBot)
