# internal/ports/httpport/openapi_types.gen.go
@@ -1,6 +1,6 @@
 // Package httpport provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by unknown module path version unknown version DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.2.0 DO NOT EDIT.
 package httpport
 
 import (
@@ -44,6 +44,7 @@ type Bot struct {
 	BotUUID   string       `json:"botUUID"`
 	CreatedAt time.Time    `json:"createdAt"`
 	Entries   []EntryPoint `json:"entries"`
+	Mailings  *[]Mailing   `json:"mailings,omitempty"`
 	Name      string       `json:"name"`
 	Status    BotStatus    `json:"status"`
 	Token     string       `json:"token"`
@@ -67,6 +68,13 @@ type Error struct {
 // GetBots defines model for GetBots.
 type GetBots = []Bot
 
+// Mailing defines model for Mailing.
+type Mailing struct {
+	EntryKey      string `json:"entryKey"`
+	Name          string `json:"name"`
+	RequiredState int    `json:"requiredState"`
+}
+
 // Option defines model for Option.
 type Option struct {
 	Next int    `json:"next"`
@@ -75,11 +83,12 @@ type Option struct {
 
 // PostBots defines model for PostBots.
 type PostBots struct {
-	Blocks  []Block      `json:"blocks"`
-	BotUUID string       `json:"botUUID"`
-	Entries []EntryPoint `json:"entries"`
-	Name    string       `json:"name"`
-	Token   string       `json:"token"`
+	Blocks   []Block      `json:"blocks"`
+	BotUUID  string       `json:"botUUID"`
+	Entries  []EntryPoint `json:"entries"`
+	Mailings *[]Mailing   `json:"mailings,omitempty"`
+	Name     string       `json:"name"`
+	Token    string       `json:"token"`
 }
 
 // CreateBotJSONRequestBody defines body for CreateBot for application/json ContentType.
